crates/cairn-lang-core/tests/snapshots/intent_lower__lowers_at_side_walkway.snap
---
source: crates/cairn-lang-core/tests/intent_lower.rs
expression: lower_source(&source)
---
semantic_level: grouped
headers:
  - kind: Cairn
    version: "2026.06"
  - kind: Requires
    requirement: version>=1.20
themes:
  - name: medieval
    slots:
      floor:
        kind: Token
        value: oak_planks
      wall:
        kind: Token
        value: cobblestone
    selectors: []
defs:
  - name: cottage
    size:
      w: 3
      h: 3
    args: {}
    members:
      - id: floor
        role:
          kind: Floor
        mat_slot: floor
        intent_state: {}
      - id: walls
        class: outer
        role:
          kind: Walls
        mat_slot: wall
        intent_state:
          height:
            kind: Int
            value: 3
      - id: east_corner
        role:
          kind: Door
        intent_state:
          side:
            kind: Ident
            value: front
          at:
            kind: Ident
            value: right
      - id: west_corner
        role:
          kind: Door
        intent_state:
          side:
            kind: Ident
            value: front
          at:
            kind: Ident
            value: left
sites:
  - name: duo
    placements:
      - id: west
        role:
          kind: Place
        intent_state:
          use:
            kind: Ident
            value: cottage
          theme:
            kind: Ident
            value: medieval
          at:
            kind: Ident
            value: origin
      - id: east
        role:
          kind: Place
        intent_state:
          use:
            kind: Ident
            value: cottage
          theme:
            kind: Ident
            value: medieval
          east_of:
            kind: Ident
            value: west
          gap:
            kind: Int
            value: 5
      - role:
          kind: Connect
        positional:
          - kind: DotRef
            value:
              - west
              - east_corner
          - kind: Ident
            value: to
          - kind: DotRef
            value:
              - east
              - west_corner
        intent_state:
          path:
            kind: Token
            value: gravel
structs: []
