crates/cairn-lang-core/tests/snapshots/intent_lower__lowers_roof_flat.snap
---
source: crates/cairn-lang-core/tests/intent_lower.rs
expression: lower_source(&source)
---
semantic_level: grouped
headers:
  - kind: Cairn
    version: "2026.06"
  - kind: Requires
    requirement: version>=1.20
themes:
  - name: outpost
    slots:
      floor:
        kind: Token
        value: oak_planks
      wall:
        kind: Token
        value: cobblestone
      roof:
        kind: Token
        value: spruce_planks
    selectors: []
defs: []
sites: []
structs:
  - name: roof_flat
    size:
      w: 6
      h: 6
    args: {}
    members:
      - role:
          kind: Floor
        mat_slot: floor
        intent_state: {}
      - role:
          kind: Walls
        mat_slot: wall
        intent_state:
          height:
            kind: Int
            value: 4
      - role:
          kind: Roof
        mat_slot: roof
        intent_state:
          kind:
            kind: Ident
            value: flat
          overhang:
            kind: Int
            value: 1
